--- a/accounts/templates/accounts/customer_accounts_list_view.html
+++ b/accounts/templates/accounts/customer_accounts_list_view.html
@@ -11,7 +11,6 @@
   <!-- testing -->
  
   <div class="recent_navbar_box">
- 
     <div class="recent_navbar_box_upper">
       <img class="project_icon_logo" src="{% static 'accounts/images/account_icon.png' %}" alt="Image not Found">
       <label for="">Accounts</label><br>
@@ -24,202 +23,204 @@
  
       <input class="recent_search" type="search" name="" id="" placeholder="  Search">
     </div>
- 
- 
   </div>
  
+<style>
  
  
  
-  <style>
+    *{
+      font-family: Arial, Helvetica, sans-serif;
+     
+    }
  
-{% comment %} css start {% endcomment %}
- 
-*{
-  font-family: Arial, Helvetica, sans-serif;
-}
- {% comment %} .recent_navbar_box_upper{
-  position: fixed;
-}  {% endcomment %}
- 
-.recent_navbar_box {
-  width: 100%;
-  border-radius: 10px;
- 
-}
- 
-.project_icon_logo {
-  background-color: #d12222;
-  border-radius: 2px;
-  width: auto;
-  height: 35px;
-  float: left;
-  margin: 5px;
-  margin-right: 10px;
-}
- 
-.recent_navbar_box_upper {
-  height: 80px;
-  width: auto;
-  background-color: #e8eaec;
-  padding: 5px;
-  border-radius: 10px;
-}
- 
-.recent_navbar_box_upper .recent_search{
-  float: right;
-  border-radius: 5px;
-  border: 1px solid gray;
-  width: 20%;
-  margin-right: 1%;
-  padding: 5px;
-}
- 
-.recent_search:focus{
-      outline: none; /* Remove default outline */
-      box-shadow: 0 0 10px #d1a2a2;  
-}
- 
-.new_project_button{
-  float: right;
-  background-color: white;
-  color: #d12222;
-  border-radius: 5px;
-  padding: 5px 15px;
-  text-decoration: none;
-  border:1px solid #d12222;
- 
-}
- 
-.new_project_button:hover{
-background-color: #d12222;
-color: white;
-}
- 
- 
-/* selection popup form start */
- 
-.selection_window_account {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ffffff;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  z-index: 9999;
-  width: 600px;
-  max-height: 80%;
-  overflow-y: auto;/* Enable vertical scrollbar when content exceeds the maximum height */
-}
- 
-.selection_window_account_overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9998;
-}
- 
-.cross {
-  color: #aaa;
-  float: right;
-  font-size: 40px;
-  font-weight: bold;
-  cursor: pointer;
-  text-decoration: none;
-}
- 
-.cross:hover,
-.cross:focus {
-  color: #e90909;
-  text-decoration: none;
-  cursor: pointer;
-}
- 
-.account_information_box  {
-  margin-left: 30%;    
-}
- 
- 
- 
-.Submit_buttons {
-  background-color: rgb(161, 155, 155);
-  color: white;
-  border-radius: 3px;
-  border: none;
-  padding: 10px 15px;
-  text-decoration: none;
- 
-}
- 
-.selection_window_account .Submit_buttons:hover{
-  background-color: rgb(128, 125, 125);
-}
- 
-.selection_window_account .Submit_buttons_box {
-  text-align: right;
-  display: flex;
-  float: right;
-  gap: 2px;
-}
- 
- 
-{% comment %} table CSS {% endcomment %}
-    .this_page_table
-    {
-      border-block: 1px solid rgba(128, 128, 128, 0.685);
+    .recent_navbar_box{
       width: 100%;
-      border-collapse: collapse;
-   
-    }
-   
-    .table-head-style{
-        background-color: #e8eaec;
-        border: 1px solid rgba(128, 128, 128, 0.685);
-        height: 30px;
-    }
-    .table-head-col-style{
-        border: 1px solid rgba(128, 128, 128, 0.685);
-        text-align: left;
-        padding-left:3px;
-    }
-   
-    .table-head-col-style:hover{
-        background-color: rgba(201, 201, 201, 0.76);
-        color: rgba(0, 0, 0, 0.795);
-    }
-   
-    .table-row-style{
-        height: 0.1rem;
-        border-block: 1px solid rgba(128, 128, 128, 0.685);
-        padding-block: 1px;
-    }
-   
-    .body-row-col-style{
-        padding-left: 3px;
-        padding-top: 0.5%;
-    }
-    .table-row-style:hover{
-        background-color: rgba(201, 201, 201, 0.171);
-        border-block: 1px groove rgba(182, 181, 181, 0.753);
-        /*height: 0.9rem;*/
-        padding: 0px;
-   
+     
     }
  
-    .a-tag-style-remove{
-      text-decoration: none;
-      color: rgb(3, 0, 187);
-      font-size: medium;
-  }
+    .project_icon_logo {
+      background-color: #d12222;
+      border-radius: 2px;
+      width: auto;
+      height: 35px;
+      float: left;
+      margin: 5px;
+      margin-right: 10px;
+    }
    
-  </style>
+    .recent_navbar_box_upper {
+      height: 80px;
+      width: auto;
+      background-color: #e8eaec;
+      padding: 5px;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+    }
+   
+    .recent_navbar_box_upper .recent_search{
+      float: right;
+      border-radius: 5px;
+      border: 1px solid gray;
+      width: 20%;
+      margin-right: 1%;
+      padding: 5px;
+    }
+   
+    .recent_search:focus{
+          outline: none; /* Remove default outline */
+          box-shadow: 0 0 10px #d1a2a2;  
+    }
+   
+    .new_project_button{
+      float: right;
+      background-color: white;
+      color: #d12222;
+      border-radius: 5px;
+      padding: 5px 15px;
+      text-decoration: none;
+      border:1px solid #d12222;
+   
+    }
+   
+    .new_project_button:hover{
+    background-color: #d12222;
+    color: white;
+    }
+   
+   
+    /* selection popup form start */
+   
+    .selection_window_account {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #ffffff;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      z-index: 9999;
+      width: 600px;
+      max-height: 80%;
+      overflow-y: auto;/* Enable vertical scrollbar when content exceeds the maximum height */
+    }
+   
+    .selection_window_account_overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 9998;
+    }
+   
+    .cross {
+      color: #aaa;
+      float: right;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+    }
+   
+    .cross:hover,
+    .cross:focus {
+      color: #e90909;
+      text-decoration: none;
+      cursor: pointer;
+    }
+   
+    .account_information_box  {
+      margin-left: 30%;    
+    }
+   
+   
+   
+    .Submit_buttons {
+      background-color: rgb(161, 155, 155);
+      color: white;
+      border-radius: 3px;
+      border: none;
+      padding: 0.4rem 0.8rem;
+      text-decoration: none;
+     
+   
+    }
+   
+    .selection_window_account .Submit_buttons:hover{
+      background-color: rgb(128, 125, 125);
+    }
+   
+    .selection_window_account .Submit_buttons_box {
+      text-align: right;
+      display: flex;
+      float: right;
+      gap: 0.5rem;
+    }
+   
+   
+    {% comment %} table CSS {% endcomment %}
+        .this_page_table
+        {
+          border-block: 1px solid rgba(128, 128, 128, 0.685);
+          width: 100%;
+          border-collapse: collapse;
+     
+        }
+     
+        .table-head-style{
+            background-color: #e8eaec;
+            border: 1px solid rgba(128, 128, 128, 0.685);
+            height: 30px;
+        }
+        .table-head-col-style{
+            border: 1px solid rgba(128, 128, 128, 0.685);
+            text-align: left;
+            padding-left:3px;
+        }
+     
+        .table-head-col-style:hover{
+            background-color: rgba(201, 201, 201, 0.76);
+            color: rgba(0, 0, 0, 0.795);
+        }
+     
+        .table-row-style{
+            height: 0.1rem;
+            border-block: 1px solid rgba(128, 128, 128, 0.685);
+            padding-block: 1px;
+        }
+     
+        .body-row-col-style{
+            padding-left: 3px;
+            padding-top: 0.5%;
+        }
+        .body-row-col-style:hover{
+          background:rgba(201, 201, 201, 0.271);
+        }
+       
+        .table-row-style:hover{
+            background-color: rgba(201, 201, 201, 0.171);
+            border-block: 1px groove rgba(182, 181, 181, 0.753);
+            /*height: 0.9rem;*/
+            padding: 0px;
+     
+        }
+   
+        .a-tag-style-remove{
+          text-decoration: none;
+          color: rgb(3, 0, 187);
+          font-size: medium;
+      }
+      .a-tag-style-remove:hover{
+        text-decoration: underline;
+      }
+ 
+   
+</style>
  
  
  
@@ -230,7 +231,7 @@ color: white;
               <th class="table-head-col-style"> S No.</th>
               <th class="table-head-col-style"> Accounts</th>
               <th class="table-head-col-style">Owner</th>
-              <th class="table-head-col-style">Phone Number</th>
+              <th class="table-head-col-style">Record Type</th>
            
           </tr>
       </thead>
@@ -238,23 +239,23 @@ color: white;
         {% for account in accounts %}
           <tr class="table-row-style">
               <td class="body-row-col-style">{{ forloop.counter }}</td>
-
+ 
               {% if account.record_type == "Customer"  %}
               <td class="body-row-col-style"><a class="a-tag-style-remove" href="{% url 'accounts:customer_account_detail_view' account.id%}">{{ account.ca_name }}</a></td>
               {% elif account.record_type == "Vendor"  %}
               <td class="body-row-col-style"><a class="a-tag-style-remove" href="{% url 'accounts:vendor_account_detail_view' account.id%}">{{ account.va_name }}</a></td>
               {% endif %}
-
+ 
               {% if account.record_type == "Customer"  %}
               <td class="body-row-col-style">{{ account.ca_account_owner }}</td>
               {% elif account.record_type == "Vendor"  %}
               <td class="body-row-col-style">{{ account.va_account_owner }}</td>
               {% endif %}
-
+ 
               {% if account.record_type == "Customer"  %}
-              <td class="body-row-col-style">{{ account.ca_phone_number }}</td>
+              <td class="body-row-col-style">{{ account.record_type }}</td>
               {% elif account.record_type == "Vendor"  %}
-              <td class="body-row-col-style">{{ account.va_phone_number }}</td>
+              <td class="body-row-col-style">{{ account.record_type }}</td>
               {% endif %}
              
           </tr>
