--- a/orders/templates/orders/sales_order_list_view.html
+++ b/orders/templates/orders/sales_order_list_view.html
@@ -1,41 +1,41 @@
 {% extends 'header.html' %}
 {% load static %}
-
+ 
 {% block title %}Account List{% endblock %}
-
+ 
 {% block extracss %}
     <link rel="stylesheet" href="{% static 'accounts/css/customer_accounts_list_view.css' %}">
 {% endblock %}
-
+ 
 {% block content %}
-
+ 
   <div class="recent_navbar_box">
-
+ 
     <div class="recent_navbar_box_upper">
       <img class="project_icon_logo" src="{% static 'orders/images/sales_order_icon.png' %}" alt="">
       <label for="">TIG Orders</label><br>
       <label style="font-size: larger;" for=""><b>Recent Orders</b></label>
       <!-- <a  href="selection_window.html" class="new_project_button" ><b>New</b></a> -->
-
+ 
       <button class="new_orders_button" onclick="openPopup_selection_order()"><b>New </b></button>
-
+ 
       <!-- <button href="selection_window.html" class="new_project_button" onclick="openPopup_selection()" ><b>New</b></button> -->
-
-
-
+ 
+ 
+ 
       <input class="recent_search" type="search" name="" id="" placeholder="  Search">
     </div>
-
-
+ 
+ 
   </div>
-
-  <div>
+ 
+  {% comment %} <div>
     <table class="order_page_table">
       <thead class="order_page_tabe_head">
         <td>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp S.No.</td>
         <td class="project">&nbsp&nbsp&nbsp <b>Orders</b></td>
       </thead>
-  
+ 
       {% for order in sales_order %}
       <tr class="order_page_tabe_row">
         <td>&nbsp&nbsp&nbsp {{ forloop.counter }}</td>
@@ -43,60 +43,81 @@
       </tr>
       {% endfor %}
     </table>
+  </div> {% endcomment %}
+ 
+  <div>
+    <table class="this_page_table">
+      <thead class="table-head-style">
+          <tr class="head_row_style">
+              <th class="table-head-col-style width-90"> S no.</th>
+              <th class="table-head-col-style"> Orders</th>
+             
+          </tr>
+      </thead>
+      <tbody class="table-body">
+        {% for order in sales_order %}
+          <tr class="table-row-style">
+              <td class="body-row-col-style width-90">{{ forloop.counter }}</td>
+              <td class="body-row-col-style "><a class="a-tag-style-remove" href="{% url 'orders:sales_order_detail_view' order.id %}">{{ order.so_po_number }}</a></td>
+          </tr>
+          {% endfor %}
+      </tbody>
+ 
+    </table>
   </div>
-
-  <!-- --------------- -->
-
+ 
+  <!-- selection window -->
+ 
   <div id="selection_window_order" class="selection_window_order">
     <!-- <a  class="cross" >&times;</a> -->
     <h3>New Order</h3>
-
+ 
     <hr>
     <form method="post">
       <h6>Select a record type</h6>
       <div class="order_information_box">
-
+ 
         <div class="order_information_box_input">
           <ul>
             <input type="radio" id="customer_form" name="name" checked>
             <label for="">Sales Order</label><br><br>
-
+ 
             <input type="radio" id="vendor_form" name="name">
             <label for="">Purchase Order</label>
           </ul>
-
+ 
         </div>
-
-        
-
+ 
+       
+ 
         <div class="Submit_buttons_box">
           <!-- <button  class="Submit_buttons" >Next</button> -->
           <a href="order_list_view.html" class="Submit_buttons">Cancel</a>
           <a href="{% url 'orders:sales_order_creation_form' %}"  class="Submit_buttons">Next</a>
-
+ 
           <!-- <button type="button" class="Submit_buttons" onclick="nextform()">Next </button> -->
-
-
+ 
+ 
         </div>
     </form>
-
+ 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
     <script src="{% static 'orders/js/orders.js' %}"></script>
-
+ 
 <style>
   *{
     font-family: Arial, Helvetica, sans-serif;
 }
-
+ 
 .recent_navbar_box {
     width: 100%;
     border-radius: 10px;
-    margin-top: 1rem;
+   
 }
-
+ 
 .project_icon_logo {
     /* background-color: #d12222; */
     border-radius: 2px;
@@ -106,15 +127,16 @@
     margin: 5px;
     margin-right: 10px;
 }
-
+ 
 .recent_navbar_box_upper {
     height: 80px;
     width: auto;
     background-color: #e8eaec;
     padding: 5px;
-    border-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
-
+ 
 .recent_navbar_box_upper .recent_search{
     float: right;
     border-radius: 5px;
@@ -123,12 +145,12 @@
     margin-right: 1%;
     padding: 5px;
 }
-
+ 
  .recent_search:focus{
         outline: none; /* Remove default outline */
         box-shadow: 0 0 10px #d1a2a2;  
 }
-
+ 
 .new_orders_button{
     float: right;
     background-color: white;
@@ -137,19 +159,19 @@
     padding: 5px 15px;
     text-decoration: none;
     border:1px solid #d12222;
-    
+   
 }
-
+ 
 .new_orders_button:hover{
 background-color: #d12222;
 color: white;
 }
-
-
+ 
+ 
 /* selection popup form start */
-
-
-
+ 
+ 
+ 
 /* .cross {
     color: #aaa;
     float: right;
@@ -158,14 +180,14 @@ color: white;
     cursor: pointer;
     text-decoration: none;
 }
-
+ 
 .cross:hover,
 .cross:focus {
     color: #e90909;
     text-decoration: none;
     cursor: pointer;
 } */
-
+ 
 .selection_window_order {
     display: none;
     position: fixed;
@@ -181,7 +203,7 @@ color: white;
     max-height: 80%;
     overflow-y: auto;/* Enable vertical scrollbar when content exceeds the maximum height */
 }
-
+ 
 .selection_window_order_overlay {
     display: none;
     position: fixed;
@@ -192,7 +214,7 @@ color: white;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 9998;
 }
-
+ 
 .cross {
     color: #aaa;
     float: right;
@@ -201,20 +223,20 @@ color: white;
     cursor: pointer;
     text-decoration: none;
 }
-
+ 
 .cross:hover,
 .cross:focus {
     color: #e90909;
     text-decoration: none;
     cursor: pointer;
 }
-
+ 
 .order_information_box  {
     margin-left: 30%;    
 }
-
-
-
+ 
+ 
+ 
 .selection_window_order .Submit_buttons {
     background-color: rgb(161, 155, 155);
     color: white;
@@ -223,38 +245,111 @@ color: white;
     padding: 10px 15px;
     text-decoration: none;
 }
-
+ 
 .selection_window_order .Submit_buttons:hover{
     background-color: rgb(128, 125, 125);
 }
-
+ 
 .selection_window_order .Submit_buttons_box {
     text-align: right;
 }
-
+ 
 .order_page_table {
   border-block: 1px solid gray;
   border-collapse: collapse;
   margin-top: 2%;
-
+ 
 }
-
+ 
 .order_page_table tr{
     border-block: 1px solid gray;
   border-collapse: collapse;
 }
-
+ 
 .order_page_table tr:hover {
   background-color: #f2f2f2;
 }
-
+ 
 .order_page_table .project {
   width: 100%;
 }
-
+ 
 .order_page_table a {
   text-decoration: none;
 }
+ 
+.project_icon_logo {
+  background-color: #d12222;
+  border-radius: 2px;
+  width: auto;
+  height: 35px;
+  float: left;
+  margin: 5px;
+  margin-right: 10px;
+  color:white;
+}
+ 
+ {% comment %} new tabel {% endcomment %}
+ .this_page_table
+ {
+   border-block: 1px solid rgba(128, 128, 128, 0.685);
+   width: 100%;
+   border-collapse: collapse;
+ 
+ }
+ 
+ .table-head-style{
+     background-color: #e8eaec;
+     border: 1px solid rgba(128, 128, 128, 0.685);
+     height: 30px;
+ }
+ .table-head-col-style{
+     border: 1px solid rgba(128, 128, 128, 0.685);
+     text-align: left;
+     padding-left:3px;
+   
+ }
+ 
+ .table-head-col-style:hover{
+     background-color: rgba(201, 201, 201, 0.76);
+     color: rgba(0, 0, 0, 0.795);
+ }
+ 
+ .table-row-style{
+     height: 0.1rem;
+     border-block: 1px solid rgba(128, 128, 128, 0.685);
+     padding-block: 1px;
+ }
+ 
+ .body-row-col-style{
+     padding-left: 3px;
+     padding-top: 0.5%;
+ }
+ 
+ .body-row-col-style:hover{
+   background:rgba(201, 201, 201, 0.271);
+ }
+ .table-row-style:hover{
+     background-color: rgba(201, 201, 201, 0.171);
+     border-block: 1px groove rgba(182, 181, 181, 0.753);
+     /*height: 0.9rem;*/
+     padding: 0px;
+ 
+ }
+ 
+ .a-tag-style-remove{
+   text-decoration: none;
+   color: rgb(3, 0, 187);
+   font-size: medium;
+ }
+ .a-tag-style-remove:hover{
+   text-decoration: underline;
+   
+ }
+ 
+ .width-90{
+  width:10%;
+ }
 </style>
-
+ 
   {% endblock %}
